--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^7.2.2"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^41.4.2",
         "lottie-web": "^5.13.0"
     }
 }
